--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>markengler<span>.</span></h1>
+        <h1>cristiano-ronaldo<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#menu">Menu</a></li>
+          <li><a href="#hero">Home-hala-madrid</a></li>
+          <li><a href="#about">About-ronaldo</a></li>
+          <li><a href="#menu">Ronaldo-Menu</a></li>
           <li><a href="#events">Events</a></li>
           <li><a href="#chefs">Chefs</a></li>
           <li><a href="#gallery">Gallery</a></li>
